--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -8,8 +8,117 @@
 </head>
 <body>
 
+
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img1.jpeg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="img3.jpeg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="img4.jpeg" style="width:100%">
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+
+
+<!-- -------- text ---------- -->
+
+<section class="work-experience">
+    <div class="content-wrap item-details divider">
+        <h2>Madspild</h2>
+        <p>Du kan se vores kilder i den link <a href="https://www.foedevarestyrelsen.dk/Leksikon/Sider/Madspild.aspx">fødevarer</a>.</p>
+
+
+
+        <!-- text 1 -->
+        <section class="job-item">
+            <div class="job-details">
+                <h3>Rapport om fordbrugernes adfærd ved madspild 2021.</h3>
+                <p><br>Danske husholdninger har et stort spild af mad, og primært familier med børn i hjemmet har en tendens til at genere mere madspild.
+                    DCA – Nationalt Center for Fødevarer og Jordbrug ved Aarhus Universitet har for Fødevarestyrelsen i 2021 udarbejdet en rapport om forbrugernes adfærd ved madspild i familier med børn.
+                    Rapporten undersøger årsager til madspild samt praksis i husholdninger med børn under 18 år for at få indsigt i drivkræfterne bag og potentielle barrierer for at reducere madspild i husstanden.
+
+                    Undersøgelsen viser, at forbrugerne i vid udstrækning er opmærksomme på eget madspild, og de angiver at have flere tiltag overfor madspild relateret til planlægning, indkøb, opbevaring, madlavning og spisning.
+                    Der er dog plads til forbedring inden for disse områder.
+
+                    Typiske kilder til madspild er madrester på tallerkenen, i madpakker og rester, der har stået ubrugt i køleskabet for længe.
+                    Når man ser på mængderne af selvrapporteret madspild fordelt på fødevarekategorier, bliver letfordærvelige fødevarer (brød, frisk frugt, friske grøntsager og mælk) smidt ud i større mængder end andre varer.
+                    Selvom deltagerne i undersøgelsen hævder at være bevidste om deres niveau af madspild, lader de fleste stadig til at tro, at de har samme mængde eller mindre madspild end andre tilsvarende husholdninger.
+                    Alligevel viser resultaterne, at forbrugerne generelt er interesserede i at reducere deres madspild for at spare penge og for at hjælpe miljøet – men at være interesseret og motiveret er ikke helt nok til at ændre adfærd.
+                    Manglende viden om og færdigheder i at reducere madspild, kan være en barriere for at mindske madspild.
+
+                    Undersøgelsen beskriver to aspekter af villighed til forandring, nemlig villighed til at gå på kompromis og villighed til at forbedre sig.
+                    Villigheden til forandring afspejler motivation til at mindske madspild, men villighed til at forbedre sin praksis er ikke nok i sig selv.
+                    At bekæmpe madspild er en udfordring, og for at mindske spild kan man også være nødt til at indgå kompromiser i andre aspekter af sit liv.
+                    Det kan til dels forklare, hvorfor gode intentioner ikke altid resulterer i mindre madspild.</p>
+                <p>July 2006-Present</p>
+            </div>
+
+        </section>
+
+        <!-- Text 2 -->
+        <section class="job-item">
+            <div class="job-details">
+                <h3>Sådan kan virksomhed undgå madspil, f.eks ved donation.</h3>
+                <br>
+                <p>Er virksomheden i tvivl om, hvornår den må donere fødevarer til velgørende formål? Hvornår er det nok at sortere afvigende varer fra?
+                    Og kan virksomheden bruge varerne som ingrediens i produktionen?
+
+                    Virksomheden skal altid sikre sig, at fødevarerne er i orden, så de ikke gør forbrugerne syge.
+                    I mange tilfælde må virksomheden kassere varer. Men der er meget, man kan gøre for at undgå madspild.
+                    Se guiden, der fortæller, hvordan virksomheden kan undgå madspild i konkrete situationer, hvor en fødevare afviger.</p>
+
+                <p>Se denne guide: <a href="https://www.foedevarestyrelsen.dk/Selvbetjening/Guides/Sider/Saadan-kan-virksomheden-undgaa-madspild.aspx">sådan kan virksomheden undgå madspil, fx ved donation</a>.</p>
+            </div>
+
+        </section>
+
+        <!-- Text 3 -->
+        <section class="job-item">
+            <div class="job-details">
+                <h3>Læs mere om madspildinitiativer</h3>
+
+                <br>
+                <li><a href="http://altomkost.dk/fakta/madspild/">Alt om kost: Madspil</a>.</li>
+                <li><a href="https://www.foedevarestyrelsen.dk/kampagner/TjekDatoen/Sider/default.aspx">Tjekdatoen</a>.</li>
+                <li><a href="https://www.foedevarestyrelsen.dk/Leksikon/Sider/Skraldning.aspx">Skraldning</a>.</li>
+                <li><a href="http://www.stopspildafmad.dk/index.html">Bevægelsen: Om madspil</a>.</li>
+                <li><a href="https://mst.dk/find#?cludoquery=madspild&cludopage=1&cludorefurl=https://
+                mst.dk/erhverv/groen-virksomhed/groent-udviklings-og-demonstrationsprogram-gudp/gudp-projekter/2015-projekter/bedre-kvalitet-
+                af-frisk-frugt-og-groent-med-aktiv-emballage-kvalipak/&cludorefpt=Ny%20emballage%20skal%20mindske%20madspild">Miljøstyrelsens rapporter om madspild</a>.</li>
+
+            </div>
+        </section>
+    </div>
+</section>
+
+        <!-- footer -->
+        <!-- il faut ecrie ecrire kontakt page en sort sans que ca mouve. -->
+
 <footer class="footer">
-    <div class="container">
+    <div class="container-footer">
         <div class="row">
             <div class="footer-col">
                 <h4>Names</h4>
@@ -45,5 +154,35 @@
     </div>
 </footer>
 
+<script>
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+        showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+        showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = slides.length}
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex-1].style.display = "block";
+        dots[slideIndex-1].className += " active";
+    }
+</script>
+
 </body>
 </html>
+
