--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -14,17 +14,17 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
+        <div class="numbertext"></div>
         <img src="img1.jpeg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
+        <div class="numbertext"></div>
         <img src="img3.jpeg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
+        <div class="numbertext"></div>
         <img src="img4.jpeg" style="width:100%">
     </div>
 
@@ -125,7 +125,7 @@
                 <ul>
                     <li> <a href="index.html">About us</a> </li>
                     <li> <a href="page1.html">Our services</a> </li>
-                    <li> <a href="page1.html">Privacy policey</a> </li>
+                    <li> <a href="page1.html">Policy</a> </li>
                     <li> <a href="page1.html">Affiliate program</a> </li>
                 </ul>
             </div>
@@ -133,17 +133,16 @@
             <div class="footer-col">
                 <h4>Kontak</h4>
                 <ul>
-                    <li> <a href="#">tel: +45 22334455</a> </li>
-                    <li> <a href="#">adresse: rødkilevej 11</a> </li>
-                    <li> <a href="#">email: madspile@mad.dk</a> </li>
-                    <li> <a href="#">CVR nr 38 21 72 91</a> </li>
+                    <li>Tel: +45 22334455</li>
+                    <li>Adresse: Rødkilevej 11 </li>
+                    <li>Email: Madspild@mad.dk</li>
+                    <li>CVR nr 38 21 72 91</li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Social Media</h4>
                 <div class="social-link">
                     <a href="#"> <i class="fab fa-facebook-f"> </i> </a>
-                    <a href="#"> <i class="fab fa-twitter"> </i> </a>
                     <a href="#"> <i class="fab fa-github"> </i> </a>
                     <a href="#"> <i class="fab fa-discord"> </i> </a>
                     <a href="#"> <i class="fab fa-youtube"> </i> </a>
