--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -8,6 +8,28 @@
 </head>
 <body>
 
+<header>
+    <table>
+        <td><h2 class="block2">Donate</h2></td>
+        <td><a href="faq.html"><h2 class="block3">FAQ</h2></a></td>
+        <td class="housetable">
+            <div class="house">
+                <div class="house-chimney"></div>
+                <div class="house-roof"></div>
+                <div class="house-frame"></div>
+                <div class="house-door"></div>
+            </div>
+        </td>
+        <td><h2 class="block2">About Us</h2></td>
+        <td><h2 class="block2">Social Media</h2></td>
+        <td>
+            <div class="splash">
+                <h1>Food waste sux!</h1>
+            </div>
+        </td>
+    </table>
+</header>
+
 
 <!-- Slideshow container -->
 <div class="slideshow-container">
