--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -7,26 +7,17 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-
 <header>
     <table>
-        <td><h2 class="block2">Donate</h2></td>
-        <td><a href="faq.html"><h2 class="block3">FAQ</h2></a></td>
-        <td class="housetable">
-            <div class="house">
-                <div class="house-chimney"></div>
-                <div class="house-roof"></div>
-                <div class="house-frame"></div>
-                <div class="house-door"></div>
-            </div>
+        <td class="header-table"><h2 class="block2">Doner</h2></td>
+        <td class="header-table"><a href="faq.html"><h2 class="block3">FAQ</h2></a></td>
+        <td class="house-icon">
+            <a href="page2.html">
+                <img src="pictures/black-house.png" alt="House icon" class="house-icon" title="Hjem">
+            </a>
         </td>
-        <td><h2 class="block2">About Us</h2></td>
-        <td><h2 class="block2">Social Media</h2></td>
-        <td>
-            <div class="splash">
-                <h1>Food waste sux!</h1>
-            </div>
-        </td>
+        <td class="header-table"><h2 class="block2">Om Os</h2></td>
+        <td class="header-table"><h2 class="block2">Social Media</h2></td>
     </table>
 </header>
 
@@ -34,20 +25,24 @@
 <!-- Slideshow container -->
 <div class="slideshow-container">
 
+    <div class="introduction">
+        <p><b>Velkommen til StopMadSpild.dk. En hjemmeside dedikeret til at formindske madspild i Danmark.</b></p>
+    </div>
+
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
         <div class="numbertext"></div>
-        <img src="img1.jpeg" style="width:100%">
+        <img src="pictures/img1.jpeg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext"></div>
-        <img src="img3.jpeg" style="width:100%">
+        <img src="pictures/img3.jpeg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext"></div>
-        <img src="img4.jpeg" style="width:100%">
+        <img src="pictures/img4.jpeg" style="width:100%">
     </div>
 
     <!-- Next and previous buttons -->
