--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -20,14 +20,11 @@
         <td class="header-table"><h2 class="block2">Social Media</h2></td>
     </table>
 </header>
-
-
-<!-- Slideshow container -->
-<div class="slideshow-container">
-
     <div class="introduction">
         <p><b>Velkommen til StopMadSpild.dk. En hjemmeside dedikeret til at formindske madspild i Danmark.</b></p>
     </div>
+<!-- Slideshow container -->
+<div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
@@ -49,7 +46,6 @@
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
-<br>
 
 <!-- The dots/circles -->
 <div style="text-align:center">
@@ -138,17 +134,17 @@
     <div class="container-footer">
         <div class="row">
             <div class="footer-col">
-                <h4>Names</h4>
+                <h4>Navne</h4>
                 <ul>
-                    <li> <a href="index.html">About us</a> </li>
-                    <li> <a href="page1.html">Our services</a> </li>
+                    <li> <a href="index.html">Om Os</a> </li>
+                    <li> <a href="page1.html">Vores service</a> </li>
                     <li> <a href="page1.html">Policy</a> </li>
-                    <li> <a href="page1.html">Affiliate program</a> </li>
+                    <li> <a href="page1.html">Frivillig program</a> </li>
                 </ul>
             </div>
 
             <div class="footer-col">
-                <h4>Kontak</h4>
+                <h4>Kontakt</h4>
                 <ul>
                     <li>Tel: +45 22334455</li>
                     <li>Adresse: Rødkilevej 11 </li>
