--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -20,9 +20,13 @@
         <td class="header-table"><h2 class="block2">Social Media</h2></td>
     </table>
 </header>
-    <div class="introduction">
-        <p><b>Velkommen til StopMadSpild.dk. En hjemmeside dedikeret til at formindske madspild i Danmark.</b></p>
+
+<div class="container">
+    <img src="pictures/madspild.jpg" alt="Norway" style="width:100%;">
+    <div class="text-block">
+        <p><b>Velkommen til StopMadSpild.dk! En hjemmeside dedikeret til at formindske madspild i Danmark.</b></p>
     </div>
+</div>
 <!-- Slideshow container -->
 <div class="slideshow-container">
 
