--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -56,11 +56,31 @@ a {
     text-decoration: none;
 }
 
-.introduction {
-    margin: auto;
-    margin-top: 100px;
-    width: 1000px;
+/* Container holding the image and the text */
+.container {
+    position: relative;
+}
+
+/* Bottom right text */
+.text-block {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
     font-size: xx-large;
+    padding-left: 20px;
+    padding-right: 20px;
+    animation: fade-in 1s linear;
+}
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 /*------- Carousel SLIDER ---------*/
 
