Added header logo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-<header>
+<header class="header">
+    <div class="header-logo">
+        <table>
+            <td><img src="pictures/header%20logo.png" alt="logo" class="header-logo-img"></td>
+            <td><div class="header-logo-text">Vi spilder ikke mad</div></td>
+        </table>
+    </div>
     <table>
         <td class="header-table"><h2 class="block2">Doner</h2></td>
         <td class="header-table"><a href="faq.html"><h2 class="block3">FAQ</h2></a></td>
