--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -16,7 +16,7 @@ body{
 
 /* ------------ Header ________________*/
 
-header {
+header.header {
     opacity: 92%;
     z-index: 1;
     top: 0;
@@ -29,6 +29,22 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+.header-logo {
+    position: absolute;
+    left: 20px;
+}
+.header-logo-img {
+    width: 90px;
+}
+.header-logo-text {
+    left: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: medium;
+    font-family: Arial, sans-serif;
+    max-width: 100px;
+    position: relative;
+}
 td h2 {
     padding-left: 5px;
     padding-right: 5px;
@@ -38,6 +54,7 @@ td h2 {
     color: #fff;
 }
 img {
+    margin: auto;
     width: 300px;
 }
 .house-icon {
