Added header logo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>StopMadSpild</title>
+    <link rel="icon" href="pictures/header%20logo.png">
     <link rel="stylesheet" th:href="@{/style.css}" href="../static/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -28,9 +29,10 @@
 </header>
 
 <div class="container">
-    <img src="pictures/madspild.jpg" alt="Norway" style="width:100%;">
+    <img src="pictures/forest.gif" alt="Skov" style="width:100%;">
     <div class="text-block">
-        <p><b>Velkommen til StopMadSpild.dk! En hjemmeside dedikeret til at formindske madspild i Danmark.</b></p>
+        <h2><b>Velkommen til StopMadSpild!</b></h2>
+        <p><b>En hjemmeside dedikeret til at stoppe madspild i Danmark og gør landet grønnere </b></p>
     </div>
 </div>
 <!-- Slideshow container -->
