--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -6,6 +6,7 @@ body{
     margin: 0;
     padding: 0;
     font-size: 15px;
+    background: #1a1a1a;;
 }
 *{
     margin: 0;
@@ -34,7 +35,7 @@ table {
     left: 20px;
 }
 .header-logo-img {
-    width: 90px;
+    width: 85px;
 }
 .header-logo-text {
     left: 20px;
@@ -89,12 +90,16 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.8);
     color: white;
     font-size: xx-large;
+    text-align: center;
+    text-shadow: #0a0909;
     padding-left: 20px;
     padding-right: 20px;
-    animation: fade-in 1s linear;
+    animation: fade-in 2s ease-in;
+}
+.text-block-top {
+
 }
 @keyframes fade-in {
     0% {
