forside text ændret

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
     <img src="pictures/forest.gif" alt="Skov" style="width:100%;">
     <div class="text-block">
         <h2><b>Velkommen til StopMadSpild!</b></h2>
-        <p><b>En hjemmeside dedikeret til at stoppe madspild i Danmark og gør landet grønnere </b></p>
+        <p><b>En hjemmeside dedikeret til at hjælpe befolkningen med at stoppe madspild og gøre landet grønnere </b></p>
     </div>
 </div>
 <!-- Slideshow container -->
