--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 <div class="container">
     <img src="pictures/forest.gif" alt="Skov" style="width:100%;">
     <div class="text-block">
-        <h2><b>Velkommen til StopMadSpild!</b></h2>
+        <h2 class="text-block-heading"><b>Velkommen til Danmark Mod Madspilds hjemmeside!</b></h2>
         <p><b>En hjemmeside dedikeret til at stoppe madspild i Danmark og gør landet grønnere </b></p>
     </div>
 </div>
